fix stock apis for openapi
